syntax = "proto3";

package educator;

import "helpers.proto";

// 
message User {
    // 
    exonum.PublicKey key = 1;
}

//
message Add_User {
    // 
    exonum.PublicKey key = 1;
}

// 
message Class {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string class_name = 2;
}

// 
message Task {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string task_name = 2;
}

// 
message Add_Class {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string class_name = 2;
}

// 
message Add_Task {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string task_name = 2;
}

//
message Cert {
    //
    exonum.PublicKey student_key = 1;

    string course_name = 2;
}